static/_files/css/style_2013.css
/* ... */
.footer-links-group > h3:after, .footer-links-group > h2:after {
    background-image: url(img/miscButtons.png);
    background-position: -23px 0;
    margin-top: -4px;
    width: 27px;
    height: 27px;
    display: block;
    content: "";
    float: right;
}
@media only screen and (min-width: 780px) {
    .footer-links-group > h3, .footer-links-group > h2 {
        color: #edeade;
    }
}

.footer-links-group.is-visible > h3:after {
    background-position: -23px -29px;
}
.footer-links-group > ul {
    list-style-type: none;
    padding: 0 20px 20px 20px;
    line-height: 20px;
    display: none;
}
.footer-links-group.is-visible > ul {
    display: block;
}
.footer-links-group a {
    color: #383838;
}
.footer-links-group a:hover {
    color: #a9233a;
}

.footer-social-icons {
    display: none;
}

.footer .address {
    font-size: 14px;
    float: left;
}
.footer .weather {
    float: right;
}
.footer .copyright {
    clear: both;
}

.footer-ribbon {

}
.footer-info {
    background-color: #eaeaea;
    border-bottom: 1px solid #cecdc7;
    padding: 20px 10px 20px 10px;
}

@media only screen and (min-width: 780px) {

    .footer {
        /*background-color: #e5e4df;*/
        background-position: top right;
        border-top: 1px solid #cecdc8;
        padding: 20px 0 200px 0;
    }

    .home .footer {
        margin-top: -20px;
    }


    .footer .weather,
    .footer .address,
    .footer .copyright {
        float: none;
    }

    .footer .address {
        margin-top: 15px;
        line-height: 15px;
    }

    .footer .copyright {
        margin-top: 10px;
    }

    .footer-ribbon,
    .footer-ribbon .footer-ribbon-before,
    .footer-ribbon .footer-ribbon-after {
        height: 45px;
        line-height: 45px;
    }

    .footer-ribbon,
    .footer-ribbon .footer-ribbon-before {
        background-color: #2f2f2f;
    }

    .footer-ribbon,
    .footer-info {
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        position: relative;
    }

    .footer-ribbon {
        padding: 0 0 0 10px;
        margin: 0;
        width: 70%;
        position: relative;
        z-index: 100;
        float: left;
    }

    .footer-ribbon .footer-ribbon-after {
        background-image: url(img/ribbon_tails.png);
        background-repeat: no-repeat;
        background-position: right 0;
        position: absolute;
        width: 15px;
        top: 0;
        right: -15px;
    }

    .footer-ribbon .footer-ribbon-before {
        position: absolute;
        top: 0;
        left: -1000%;
        width: 1000%;
    }

    .footer-social-icons {
        display: block;
    }

    .footer-links-group {
        background: transparent;
        padding: 0;
        width: 25%;
        float: left;
    }
    .footer-links-group:hover > h3, .footer-links-group:hover > h2 {
    }

    .footer-links-group > h3, .footer-links-group > h2 {
        font-style: normal;
        font-size: 16px;
        font-weight: 100;
        text-transform: uppercase;
        color: #edeade;
        display: block;
        cursor: default;
        padding: 10px 0 10px 0;
        margin: 0;
    }
    .footer-links-group > h3:after, .footer-links-group > h2:after {
        background: none;
    }
    .footer-links-group > ul {
        line-height: 22px;
        padding: 0 10px 0 0;
        margin-top: 12px;
        display: block;
    }
    .footer-links-group > ul > li {
        font-size: 14px;
        line-height: 16px;
        margin: 8px 0 8px 0;
    }
    .footer-links-group.footer-social-icons > ul {
        padding-right: 0;
        margin-top: 0;
    }
    .footer-links-group > li {
        padding: 0;
        margin: 0;
    }

    .footer-info {
        background-color: transparent;
        border-bottom: none;
        margin-top: 0;
        padding-top: 0;
        padding-left: 65px;
        width: 30%;
        float: right;
        clear: none;
    }

}

@media only screen and (min-width: 1085px) {

    .footer-links {
        top: 12px;
    }
    .footer-links-group > h3, .footer-links-group > h2 {
        font-size: 18px;
    }

}
@media only screen and (min-width: 1160px) {

    .footer-ribbon {
        padding: 0 0 0 10px;
    }

}
/* ... */

